--- a/website/static/styles/display.css
+++ b/website/static/styles/display.css
@@ -179,7 +179,7 @@ a.active,a:hover {
 }
 .chart {
     border: none;
-    font-family: union,Arial,Helvetica,sans-serif;
+    font-family: myFont5;
     background: white;
     border-bottom: 1px solid black;
     margin: 0;
@@ -207,6 +207,9 @@ p {
     font-family:  union,Arial,Helvetica,sans-serif;
     font-size: 16px;
     font-weight: bold;
+}
+label {
+    font-family: myFont5;
 }
 #numberInput {
     width: 50px;
@@ -259,12 +262,15 @@ p {
     margin-left: 10px;
     font-size: 25px;
 }
+.centered-div {
+    width: calc(100% - 200px);
+    margin-left: 100px;
+    margin-right: 100px;
+}
 .cart-head {
     display: flex;
-    width: 85%;
+    width: 100%;
     margin-top: 90px;
-    margin-right: 100px;
-    margin-left: 100px;
     justify-content: space-between;
 }
 .cont {
@@ -282,11 +288,8 @@ p {
 }
 
 .shopped-bag {
-   
     display: block;    
-    margin-right: 100px;
-    margin-left: 100px;
-    width: 95%;
+    width: 100%;
 }
 .shop-bag {
     display: flex;
@@ -313,7 +316,7 @@ p {
     font-size: 40px; 
 }
 .order-details {
-    width: 90%;
+    width: 100%;
     display: flex;
     margin: 0;
     padding: 0;
@@ -391,16 +394,19 @@ p {
     color: black;
 }
 .total-details {
-    width: 90%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+    height: 200px;
+    flex: 1;
 }
 .sub-total{
+    margin-top: 30px;
     display: flex;
     justify-content: space-between;
-    width: 400px;
     color: black;
+    width: 330px;
     font-size: 16px;
     font-family: myFont5;
     padding-bottom: 10px;
@@ -408,16 +414,16 @@ p {
 }
 .tot {
     display: flex;
+    width: 330px;
     font-weight: bold;
     font-size: 25px;
-    width: 400px;
     color: black;
     font-family: myFont5;
     align-items: center;
 }
 
 .exclu {
-    margin-right: 41px;
+    
     font-weight: 100;
     font-family: myFont5;
     font-size: 16px;
@@ -425,8 +431,18 @@ p {
 .subb {
     font-weight: bold;
     font-size: 30px;
-    padding-left: 100px;
+    padding-left: 80px;
 }
+.check-outtotal {
+    border: none;
+    height: 50px;
+    width: 330px;
+    background-color: orange;
+    font-family: myFont;
+    font-size: 30px;
+    border-radius: 2px;
+}
+
 
 @media (max-width: 952px) {
     label.logo{
