--- a/website/templates/seller.html
+++ b/website/templates/seller.html
@@ -18,6 +18,7 @@
         </label>
         <label class="logo"><i>M</i>o<i>ES</i> <i>C</i>o<i>ll</i>ectio<i>N</i></label>
         <ul>
+            <li><a class="active" href="/seller_orders"><img src="../static/images/shopping-bag.png" style="margin-right: 5px;">Bag</a></li>
             <li><a class="active" href="/seller_logout">Logout</a></li>
         </ul>
     </nav>
