--- a/website/templates/display.html
+++ b/website/templates/display.html
@@ -18,12 +18,12 @@
         </label>
         <label class="logo"><i>M</i>o<i>ES</i> <i>C</i>o<i>ll</i>ectio<i>N</i></label>
         <ul>
-            <li><a class="active" href="/"><img src="../static/images/shopping-bag.png" style="margin-right: 5px;">Bag</a></li>
+            <li><a class="active" href="/display_cart/{{ user_id }}"><img src="../static/images/shopping-bag.png" style="margin-right: 5px;">Bag</a></li>
             <li><a href="/logout">Logout</a></li>
         </ul>
     </nav>
         <div id="capturedContent" class="all-div">
-            <div class="carry_all">
+            <div class="carry_not" data-seller-id="{{ contents.sellerId }}">
                 <div class="carry_img">
                     <img class="hair" src="{{ contents.imageSrc }}">
                 </div>
