--- a/website/static/styles/orders.css
+++ b/website/static/styles/orders.css
@@ -109,12 +109,13 @@ input::placeholder {
 .order-content {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    margin-top: 30px;
+    margin-top: 10px;
     font-family: myFont5;
 }
 .colon-names {
+    margin-top: 0;
+    margin-bottom: 0;
     margin-top: 30px;
-    margin-bottom: 10px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     font-family: myFont;
