--- a/website/templates/seller.html
+++ b/website/templates/seller.html
@@ -45,6 +45,24 @@
     </div>
 
     <div class="em-cont">
+        <label for="productPricePerInch">Product Price Per Inch:</label>
+        <input 
+            type="number" 
+            id="productPricePerInch" 
+            name="productPricePerInch" 
+            class="the-control" 
+        />
+        </div>
+        <div class="em-cont">
+            <label for="inchesAboveTwenty">Inches Above Twenty:</label>
+            <input 
+                type="number" 
+                id="inchesAboveTwenty" 
+                name="inchesAboveTwenty" 
+                class="the-control" 
+            />
+            </div>
+    <div class="em-cont">
     <label for="productQuantity">Product Gram:</label>
     <input 
         type="number"
