--- a/website/templates/views.html
+++ b/website/templates/views.html
@@ -36,6 +36,8 @@
             <span class="content-sp">Gram: {{product.productQuantity}}</span>
             <span class="content-sp">Colors: {{product.productColor }}</span>
             <span class="content-sp"><b>Price: {{ product.productPrice }}</b></span>
+            <span class="content-sp"><b>Price by Inch: {{ product.productPricePerInch }}</b></span>
+            <span class="content-sp"><b>Price Inches Above Twenty: {{ product.inchesAboveTwenty }}</b></span>
         </div>
     </div>
     {% endfor %}
