--- a/website/templates/display.html
+++ b/website/templates/display.html
@@ -30,7 +30,7 @@
             </div>
             <div class="overall">
                 <div class="the_links">
-                    <a class="the_ref" href="/main_views">Women</a> &#47;
+                    <a class="the_ref" href="/main_views/{{ user_id}}">Women</a> &#47;
                     <a class="the_ref" href="/">Home</a>
                 </div>
                 <div class="name_price">
