--- a/website/templates/display_cart.html
+++ b/website/templates/display_cart.html
@@ -15,7 +15,7 @@
         <span class="logos"><i>M</i>o<i>ES</i>&nbsp;  <i>C</i>o<i>ll</i>ectio<i>N</i></span>
     </div>
     <div class="cart-head">
-        <span class="cont"><a href='/main_view'>&#8592; Continue shopping</a></span>
+        <span class="cont"><a href="/main_views/{{ user_id }}">&#8592; Continue shopping</a></span>
         <button class="check-out">checkout</button> 
     </div>
     <div class="shopped-bag">
