--- a/website/static/styles/orders.css
+++ b/website/static/styles/orders.css
@@ -36,24 +36,31 @@ body {
 }
 
 .column-1 {
-    width: 300px;
-    max-width: 300px;
-    background-color: orange; 
+    width: 400px;
+    max-width: 400px;
+    background-color:white; 
     display: flex;
     flex-direction: column;
+    border-right: 1px solid rgb(235, 233, 233);
 }
 label.logo {
     font-size: 30px;
     color: black;
-    padding: 20px 10px;
+    padding: 30px 10px;
     font-weight: medium;
-    font-family: myFont3
+    font-family: myFont3;
+    background-color: orange; 
+    border-top-left-radius: 10px;
 }
 
 .home-div, .productboard {
     width: 100%;
     padding: 20px 40px;
     font-family: myFont4;
+    background-color: orange;
+}
+.productboard {
+    border-bottom-right-radius: 10px; 
 }
 .column-1 a {
     text-decoration: none;
