--- a/website/templates/display.html
+++ b/website/templates/display.html
@@ -77,5 +77,33 @@
                 </div>
             </div>
         </div>
+        <div class="cart-overlay" id="cart-overlay">
+            <span class="add-it">ADDED ITEM&#40;1&#41;</span>
+            <div class="cart-overit">
+                <div class="cart-pics-name">
+                    <div class="cart_img">
+                        <img class="cart-pics" src="../static/images/orange.jpg">
+                    </div>
+                    <div class="cart-namep">
+                        <span class="cartname" id="cartname"></span>
+                        <span class="cartprice" id="cartprice"></span>
+                        <div class="qty-cart-inches" id="qty-cart-inches">
+                            <span class="cartqty" id="cartqty">Qty: <b></b></span>
+                            <span class="cart-inch" id="cart-inch"> inches: <b> </b></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="cart-total-price">
+                    <div class="pt-tag">
+                        <span class="ex-del">Total&#40;Excl. delivery&#41;</span>
+                        <span class="ex-price" id="ex-price" >&#8358;</span>
+                    </div>
+                    <div class="cart-buttons">
+                        <button class="viewbag">View Bag</button>
+                        <button class="checkit">Checkout</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
     </html>
