--- a/website/static/styles/display.css
+++ b/website/static/styles/display.css
@@ -92,6 +92,7 @@ a.active,a:hover {
     margin-left: 40px;
     display: grid;
     grid-template-columns: 1fr 2fr;
+    position: relative;
 }
 .carry_all {
     width: 100%;
@@ -463,6 +464,101 @@ p {
     font-family: myFont;
     font-size: 30px;
     border-radius: 2px;
+}
+.cart-overlay {
+    width: 400px;
+    border: 1px solid grey;
+    background: white;
+    position: fixed;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    z-index: 1000;
+    display: None;
+    top: 11%;
+    right: 0;
+}
+.add-it {
+    display: block;
+    text-align: center;
+    margin-bottom: 20px;
+    font-family: myFont5;
+    font-size: 20px;
+    color: black;
+    font-weight: 100;
+}
+.cart-overit {
+    width: 100%;
+    display: block;
+    height: 600px;
+}
+.cart-pics-name {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+}
+.cart-pics {
+    width: 100px;
+    height: 120px;
+}
+
+.cart-namep {
+    display: block;
+    font-family: myFont;
+    justify-content: space-between;
+    font-size: 30px;
+
+}
+.cartname, .cartprice {
+    display: block;
+    font-size: 20px;
+    padding-bottom: 5px;
+}
+.cartprice {
+    padding-top: 30px;
+    font-weight: 700;
+    font-size: 22px;
+}
+.qty-cart-inches{
+    display: flex;
+}
+.cartqty, .cart-inch {
+    padding-right: 20px;
+    font-family: myFont;
+    font-size: 20px;
+    padding-top: 10px;
+}
+.cart-total-price {
+    margin-top: 30px;
+}
+.pt-tag {
+    display: flex;
+    justify-content: space-between;
+}
+.ex-del, .ex-price {
+    font-family: myFont;
+    font-size: 22px;
+    font-weight: bold;
+}
+.cart-buttons {
+    display: flex;
+    margin-top: 10px;
+}
+.viewbag, .checkit {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    width: 50%;
+    font-weight: bold;
+    font-family: myFont;
+    font-size: 20px;
+}
+.viewbag {
+    border: 1px solid black;
+    background: white;
+    margin-right: 15px;
+}
+.checkit {
+    border: none;
+    background: orange;
 }
 
 
