--- a/website/templates/display.html
+++ b/website/templates/display.html
@@ -18,7 +18,8 @@
         </label>
         <label class="logo"><i>M</i>o<i>ES</i> <i>C</i>o<i>ll</i>ectio<i>N</i></label>
         <ul>
-            <li><a class="active" href="/display_cart/{{ user_id }}"><img src="../static/images/shopping-bag.png" style="margin-right: 5px;">Bag</a></li>
+            <li><button id="cartButtss" class="active" data-user-id="{{ user_id }}">
+                <img src="../static/images/shopping-bag.png" style="margin-right: 5px;">Bag</button></li>
             <li><a href="/logout">Logout</a></li>
         </ul>
     </nav>
