--- a/website/templates/display_cart.html
+++ b/website/templates/display_cart.html
@@ -20,7 +20,7 @@
     </div>
     <div class="shopped-bag">
         <span class="shop-bag">MY SHOPPING BAG</span>
-        {% for order in inchesDictionary %}
+        {% for order in orderData %}
         <div class="order-details">
             <div class='name-details'>
                 <span class="inch-span">{{ order.productName }}</span>
