--- a/website/static/styles/display.css
+++ b/website/static/styles/display.css
@@ -1,3 +1,4 @@
+
 * {
     margin: 0;
     padding: 0;
@@ -17,10 +18,6 @@
     font-family: myFont3;
     src: url(tasteful/Taste-s.otf);
 }
-@font-face{
-    font-family: myFont4;
-    src: url(NimbusSansNovusTOT-Reg.otf);
-}
 
 @font-face{
     font-family: myFont5;
@@ -38,6 +35,7 @@ nav {
     box-shadow: 5px 5px 5px rgb(248, 247, 247);
     position: fixed;
     top: 0%;
+    z-index: 1000;
 }
 label.logo {
     line-height: 70px;
@@ -57,18 +55,19 @@ nav ul li {
     margin: 0 10px;
 }
 
-nav ul li a {
+nav ul li a, nav ul li button {
     color: black;
     font-size: 17px;
     border-radius: 3px;
     padding: 7px 13px;
     text-transform: uppercase;
     font-family: myFont2;
+    border: none;
 }
 span {
     font-size: 20px;
 }
-a.active,a:hover {
+button.active,a:hover {
     background: orange;
     transition: .5s;
 }
@@ -85,6 +84,7 @@ a.active,a:hover {
 #check {
     display: none;
 }
+
 .all-div {
     margin: 0;
     margin-top: 100px; 
@@ -93,6 +93,7 @@ a.active,a:hover {
     display: grid;
     grid-template-columns: 1fr 2fr;
     position: relative;
+    z-index: 100;
 }
 .carry_all {
     width: 100%;
