--- a/website/templates/views.html
+++ b/website/templates/views.html
@@ -20,7 +20,7 @@
         </label>
         <label class="logo"><i>M</i>o<i>ES</i> <i>C</i>o<i>ll</i>ectio<i>N</i></label>
         <ul>
-            <li><a class="active" href="/"><img src="../static/images/shopping-bag.png" style="margin-right: 5px;">Bag</a></li>
+            <li><a class="active" href="/display_cart/{{ user_id }}"><img src="../static/images/shopping-bag.png" style="margin-right: 5px;">Bag</a></li>
             <li><a href="/logout">Logout</a></li>
         </ul>
     </nav>
