--- a/website/static/styles/display.css
+++ b/website/static/styles/display.css
@@ -35,7 +35,6 @@ nav {
     box-shadow: 5px 5px 5px rgb(248, 247, 247);
     position: fixed;
     top: 0%;
-    z-index: 1000;
 }
 label.logo {
     line-height: 70px;
@@ -55,19 +54,18 @@ nav ul li {
     margin: 0 10px;
 }
 
-nav ul li a, nav ul li button {
+nav ul li a {
     color: black;
     font-size: 17px;
     border-radius: 3px;
     padding: 7px 13px;
     text-transform: uppercase;
     font-family: myFont2;
-    border: none;
 }
 span {
     font-size: 20px;
 }
-button.active,a:hover {
+a.active,a:hover {
     background: orange;
     transition: .5s;
 }
@@ -562,6 +560,10 @@ p {
     background: orange;
 }
 
+.close {
+    font-size: 45px;
+    font-weight: 600;
+}
 
 @media (max-width: 952px) {
     label.logo{
