--- a/website/templates/display_cart.html
+++ b/website/templates/display_cart.html
@@ -11,49 +11,51 @@
 </head>
 <body>
     <div class="centered-div">
-    <div class="shopped-head">
-        <span class="logos"><i>M</i>o<i>ES</i>&nbsp;  <i>C</i>o<i>ll</i>ectio<i>N</i></span>
-    </div>
-    <div class="cart-head">
-        <span class="cont"><a href="/main_views/{{ user_id }}">&#8592; Continue shopping</a></span>
-        <button class="check-out">checkout</button> 
-    </div>
-    <div class="shopped-bag">
-        <span class="shop-bag">MY SHOPPING BAG</span>
+        <div class="shopped-head">
+            <span class="logos"><i>M</i>o<i>ES</i>&nbsp;  <i>C</i>o<i>ll</i>ectio<i>N</i></span>
+        </div>
+        <div class="cart-head">
+            <span class="cont"><a href="/main_views/{{ user_id }}">&#8592; Continue shopping</a></span>
+            <button class="check-out">checkout</button> 
+        </div>
+        <div class="shopped-bag">
+            <span class="shop-bag">MY SHOPPING BAG</span>
+        </div>
         {% for order in inchesDictionary %}
-        <div class="order-details">
-            <div class='name-details'>
-                <span class="inch-span">{{ order.productName }}</span>
-            </div>
-            <div class="inches-detail">
-                <span class="inch-span">Inches</span>
-                <div class="box-inch">{{ order.productInches }}</div>
-            </div>
-            <div class="gram-details">
-                <span class="inch-span">Gram</span>
-                <div class="box-inch">{{ order.productGram }}g</div>
-            </div>
-            <div class="quantity-details">
-                <span class="inch-span">Quantity</span>
-                <div class="box-contain">
-                <div class="box-plus">&plus;</div>
-                <div class="box-quant">{{ order.productQuantity }}</div>
-                <div class="box-minus">&minus;</div>
+        <div class="order-div" data-order-id="{{ order.id}}" data-product-id2="{{ order.product_id }}" >
+            <div class="order-details" >
+                <div class='name-details'>
+                    <span class="inch-span">{{ order.productName }}</span>
                 </div>
+                <div class="inches-detail">
+                    <span class="inch-span">Inches</span>
+                    <div class="box-inch">{{ order.productInches }}</div>
+                </div>
+                <div class="gram-details">
+                    <span class="inch-span">Gram</span>
+                    <div class="box-inch">{{ order.productGram }}g</div>
+                </div>
+                <div class="quantity-details">
+                    <span class="inch-span">Quantity</span>
+                    <div class="box-contain">
+                        <div class="box-plus">&plus;</div>
+                        <div class="box-quant">{{ order.productQuantity }}</div>
+                        <div class="box-minus">&minus;</div>
+                    </div>
+                </div>
+                <div class="price-detail">
+                    <span class="inch-span">Price</span>
+                    <div class="p-tag">&#8358;{{ order.productPrice }}</div>
+                </div>
+                <div class="cancel-order"><span class="close">&times;</span></div>
             </div>
-            <div class="price-detail">
-                <span class="inch-span">Price</span>
-                <div class="p-tag">&#8358;{{ order.productPrice }}</div>
+            <div class="total-details">
+                <div class="sub-total">SubTotal <span class="sub">&#8358;{{ order.productTotal }}</span></div>
+                <div class="tot">Total<span class="exclu">&#40;Excl delivery&#41;</span> <span  data-order-ids="{{ order.id}}" class="subb">&#8358;{{ order.productTotal }}</span></div>
+                <button class="check-outtotal">checkout</button>
             </div>
-            <div class="cancel-order"><span class="close">&times;</span>
-            </div>
+            {% endfor %}
         </div>
-        <div class="total-details">
-            <div class="sub-total">SubTotal <span class="sub">&#8358;{{ order.productTotal }}</span></div>
-            <div class="tot">Total<span class="exclu">&#40;Excl delivery&#41;</span> <span class="subb">&#8358;{{ order.productTotal }}</span></div>
-            <button class="check-outtotal">checkout</button>
-        </div>
-        {% endfor %}
-        </div>
+    </div>
 </body>
 </html>
